# deepl-fastmcp-python-server

./: .env.example  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml  remote_server.py  requirements.txt
tests/: test_main.py
