[project]
name = "deepl-fastmcp-python-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "deepl>=1.22.0",
    "fastmcp>=2.8.1",
    "pytest>=8.4.0",
    "python-dotenv>=1.1.0",
    "typing-extensions>=4.14.0",
]
